20170615: 3.6.7
	* main.c: added the --size-unit option for user's preferred units.

20170614:
	* ezgui.c: fixed the shrinking window issue by skipping the first
	resize event when saving the current window's size.

20170609:
	* ezgui.c: fixed the bug which failed to drag & drop files with spaces
	inside the names.
	* libcsoup: updated to 0.9.10 to support url decoding.

20170609:
	* libcsoup: updated to 0.9.9 to harden the csc_gettoken().
	* ezthumb.h: added more video extension names as the video filter.
	* ezgui.c: xui_make_filters() expand uppercase extension for gtk.

20170608: 3.6.6
	* ezthumb.c: Fixed the bug which failed to use ffmpeg 3.x new API
	properly.
	* configure.ac: Fixed a bug which failed to install the new named
	EzthumbWin.exe.

20170602: 3.6.5
	* ezgui.c: The progress bar dialog will inherit the configuration from
	the ezthumb GUI dialog.

20170602:
	* ezgui.c: Fixed a bug that Chinese characters were failed to pass to 
	the progress bar dialog.
	* ezthumb.nsi: Workarounded the imcomplete context menu in Windows.
	Note that the issue was caused by not all video format were associated
	in HKCR\SystemFileAssociations\video, such as .mkv, .mp4, etc. 
	The workaround is by adding ezthumb to the OpenWithList. 

20170529: 3.6.4
	* ezgui.c: added some codes to verify the inputs of text controls.
	* ezthumb.c: fixed a bug which freeze the progress bar in i-frame
	dumping mode.
	* ezgui.c: fixed a bug which failed to hightlight the "RUN" button
	when media files were loaded from the command line.

20170529:
	* ezwinfont.c: added to support the TTF fonts in Windows.
	The libgd uses fontconfig to translate the font faces to the font
	files. In Windows however there's no fontconfig available so libgd
	could not find the proper font files. Unfortunately there's also no
	out-of-box APIs to directly translate the font faces to the font files
	in Windows. My approach is to enumerate all registered font faces and